force-app/main/default/objects/sfdc_user_updatedSuccess__e/sfdc_user_updatedSuccess__e.object-meta.xml
<CustomObject>
    <description>Platform Event that fires when a Contact (user) record is updated successfully. Carries a JSON payload of changed mapped fields plus fixed header identifiers for downstream integration.</description>
    <label>sfdc_user_updatedSuccess</label>
    <pluralLabel>sfdc_user_updatedSuccesses</pluralLabel>
</CustomObject>