force-app/main/default/objects/sfdc_user_updatedSuccess__e/fields/ContactCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>ContactCaseSafeID__c</fullName>
    <description>Case-safe 18-character Salesforce Contact ID for downstream integration.</description>
    <label>Contact Case Safe ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>