force-app/main/default/objects/sfdc_user_updatedSuccess__e/fields/Portal_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_ID__c</fullName>
    <description>Portal user identifier for downstream integration routing.</description>
    <label>Portal User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>